--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 
     // --- Chord/Alt names for all keys ---
     const chordNamesDefault = {
-      "8": "V/V",
-      "9": "V/vi",
-      "u": "IV",
-      "i": "V",
-      "o": "vi",
-      "l": "iii",
-      "k": "ii",
-      "j": "I",
-      "n": "IV/IV"
+      "7": "V/V",
+      "8": "V/vi",
+      "4": "IV",
+      "5": "V",
+      "6": "vi",
+      "3": "iii",
+      "2": "ii",
+      "1": "I",
+      "9": "IV/IV"
     };
     // Order: V/V, V/vi, IV, V, vi, iii, ii, I, IV/IV
     const chordNamesAltByKey = {
@@ -306,15 +306,15 @@
     // --- BUTTONS: keep a reference to each note-button div for updating their text ---
     // CHANGED: notes for n (IV/IV)
     const buttons = [
-      { name: 'V/V', key: '8', notes: ['D4', 'F#4', 'A4', 'D5'], cells: ['2a', '2b'] },
-      { name: 'V/vi', key: '9', notes: ['G#3', 'E4', 'B4', 'E5'], cells: ['2c','2d'] },
-      { name: 'IV', key: 'u', notes: ['F3','C4','F4','A4'], cells: ['3a','4a'] },
-      { name: 'V', key: 'i', notes: ['G3','G4','B4','D5'], cells: ['3b','4b','3c','4c'] },
-      { name: 'iii', key: 'l', notes: ['E3','B3','E4','G4'], cells: ['5a'] },
-      { name: 'ii', key: 'k', notes: ['D3','A3','D4','F4'], cells: ['6a'] },
-      { name: 'I', key: 'j', notes: ['C3','G3','E4','C5'], cells: ['5b','6b','7b','5c','6c','7c'] },
-      { name: 'IV/IV', key: 'n', notes: ['F3','Bb3','D4','F4'], cells: ['8b','8c'] },
-      { name: 'vi', key: 'o', notes: ['A3','E4','A4','C5'], cells: ['4d','3d'] }
+      { name: 'V/V', key: '7', notes: ['D4', 'F#4', 'A4', 'D5'], cells: ['2a', '2b'] },
+      { name: 'V/vi', key: '8', notes: ['G#3', 'E4', 'B4', 'E5'], cells: ['2c','2d'] },
+      { name: 'IV', key: '4', notes: ['F3','C4','F4','A4'], cells: ['3a','4a'] },
+      { name: 'V', key: '5', notes: ['G3','G4','B4','D5'], cells: ['3b','4b','3c','4c'] },
+      { name: 'iii', key: '3', notes: ['E3','B3','E4','G4'], cells: ['5a'] },
+      { name: 'ii', key: '2', notes: ['D3','A3','D4','F4'], cells: ['6a'] },
+      { name: 'I', key: '1', notes: ['C3','G3','E4','C5'], cells: ['5b','6b','7b','5c','6c','7c'] },
+      { name: 'IV/IV', key: '9', notes: ['F3','Bb3','D4','F4'], cells: ['8b','8c'] },
+      { name: 'vi', key: '6', notes: ['A3','E4','A4','C5'], cells: ['4d','3d'] }
     ];
 
     const grid = document.getElementById('grid');
